# lua-mac68k

./: CMakeLists.txt  LICENSE  README.md  demo.c  lua.r  luaconf.diff
lua/: luaconf.h  luaconf.h.rej
